# obWaka

./: README.md  default.nix  hie.yaml
assets/: .waka.txt.swp  waka.txt  waka_bak.txt
frontend/: frontend.cabal
frontend/src/: .ghci  Action.hs  CWidget.hs  Code.hs  Converter.hs  Define.hs  Frontend.hs  Initialize.hs  MakeText.hs  Object.hs  TextData.hs  Waka.hs
static/: main.css
