cabal-version: 2.4 
name: frontend
version: 0.1
build-type: Simple

common defaults
  default-extensions:
    FlexibleContexts
    OverloadedStrings
    TemplateHaskell
    TypeFamilies
    RankNTypes
    RecursiveDo
    DerivingStrategies
    LambdaCase

library
  import: defaults
  hs-source-dirs: src
  build-depends: base
               , common
               , jsaddle
               , jsaddle-dom
               , lens
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , reflex-dom-core
               , text
               , random
               , time
               , semigroupoids
               , bytestring
               , containers
               , linear
  exposed-modules:
    Frontend
  other-modules:
    File
    CWidget
    Define
    Initialize
    Converter
    TextData
    Object
    Code
    Action
    Waka
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
